Fix overflow x

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,2 @@
 @import '~antd/dist/antd.css';
 
-.App{
-  overflow-x: hidden !important;
-}
